--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/enhariharan/centilio-device-management-service/issues"
   },
-  "homepage": "https://github.com/enhariharan/centilio-device-management-service#readme"
+  "homepage": "https://github.com/enhariharan/centilio-device-management-service#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
