--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-exec": "^1.0.1",
     "jshint": "^2.9.4",
     "mocha": "^3.2.0"
   }
