--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-exec": "^1.0.1",
     "jshint": "^2.9.4",
+    "loadtest": "^2.2.1",
     "mocha": "^3.2.0",
     "morgan": "^1.7.0"
   }
