--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "express-logger": "0.0.3"
+    "express-logger": "0.0.3",
+    "mongoose": "^4.7.5"
   },
   "devDependencies": {
     "chai": "^3.5.0",
