--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-logger": "0.0.3",
-    "mongoose": "^4.7.5"
+    "mongoose": "^4.7.5",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
