Added apidocjs to document REST APIs

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "apidoc": "^0.16.1",
     "chai": "^3.5.0",
     "grunt": "^1.0.1",
     "grunt-cafe-mocha": "^0.1.13",
