--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "device-management-service",
+  "name": "centilio-device-management-server",
   "version": "0.2.1",
-  "description": "Centilio Device Management Service",
+  "description": "Centilio Device Management Server",
   "main": "centilio-device-management-service-cluster.js",
   "engines": {
     "node": ">=6.0.0"
@@ -34,6 +34,11 @@
     "url": "https://github.com/enhariharan/centilio-device-management-service/issues"
   },
   "homepage": "https://github.com/enhariharan/centilio-device-management-service#readme",
+  "apidoc": {
+    "title": "Centilio Device Management Server REST API Doc",
+    "url": "http://api.centilio.com/v1/",
+    "sampleUrl": "http://api.centilio.com/v1/"
+  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
@@ -46,6 +51,7 @@
     "apidoc": "^0.16.1",
     "chai": "^3.5.0",
     "grunt": "^1.0.1",
+    "grunt-apidoc": "^0.11.0",
     "grunt-cafe-mocha": "^0.1.13",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
