--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jshint": "^2.9.4",
     "loadtest": "^2.2.1",
     "mocha": "^3.2.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "restler": "^3.4.0"
   }
 }
