--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express-handlebars": "^3.0.0",
     "express-logger": "0.0.3",
     "mongoose": "^4.7.5",
+    "socket.io": "^1.7.2",
     "uuid": "^3.0.1",
     "validator": "^6.2.0"
   },
